--- a/app/src/main/res/layout/layout_editor_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_editor_bottom_sheet.xml
@@ -14,8 +14,7 @@
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
-
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
@@ -58,6 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:background="@android:color/black"
+        android:layout_below="@id/text_container"
         app:tabIndicatorColor="@color/secondaryColor"
         app:tabIndicatorGravity="stretch"
         app:tabIndicatorHeight="36dp"
@@ -70,6 +70,17 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/content_background" />
+        android:background="@color/content_background"
+        android:layout_below="@id/tabs"/>
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/clear_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_close"
+        app:backgroundTint="@color/secondaryColor" />
+
+</RelativeLayout>
