--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,100 +1,120 @@
 <resources>
+
     <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
         <item name="actionOverflowButtonStyle">@style/AppTheme.Toolbar.OverflowButton</item>
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
-		<item name="colorButtonNormal">@color/secondaryColor</item>
-		<item name="colorControlNormal">@color/secondaryColor</item>
-		<item name="colorControlHighlight">@color/rippleHighlightColor</item>
+        <item name="colorButtonNormal">@color/secondaryColor</item>
+        <item name="colorControlNormal">@color/secondaryColor</item>
+        <item name="colorControlHighlight">@color/rippleHighlightColor</item>
         <item name="fontFamily">@font/josefin_sans</item>
         <item name="hintTextColor">@color/secondaryColor</item>
         <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
         <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
-		<item name="windowActionModeOverlay">true</item>
-		<item name="windowActionBarOverlay">true</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="windowActionBarOverlay">true</item>
         <item name="android:colorButtonNormal">@color/secondaryColor</item>
-		<item name="android:textColorSecondary">@color/secondaryTextColor</item>
+        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
         <item name="android:windowBackground">@color/content_background</item>
         <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
+
     <style name="AppTheme.UIDesigner.WidgetGroupChip" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="chipIconTint">@color/primaryIconColor</item>
         <item name="chipBackgroundColor">@color/primaryColor</item>
         <item name="chipStrokeColor">@color/secondaryColor</item>
         <item name="chipStrokeWidth">1dp</item>
     </style>
+
     <style name="AppTheme.Toolbar.OverflowButton" parent="@style/Widget.AppCompat.ActionButton.Overflow">
         <item name="android:tint">@color/secondaryColor</item>
     </style>
-	<style name="AppTheme.MaterialToggleButton" parent="">
-		<item name="colorPrimary">@color/secondaryColor</item>
-	</style>
+
+    <style name="AppTheme.MaterialToggleButton" parent="">
+        <item name="colorPrimary">@color/secondaryColor</item>
+    </style>
+
     <style name="AppTheme.TabLayout.Title" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
     </style>
-	<style name="AppTheme.ProjectCreator.TextInput" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
+
+    <style name="AppTheme.ProjectCreator.TextInput" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
         <item name="colorAccent">@color/primaryTextColor</item>
         <item name="android:textColorHint">@color/secondaryTextColor</item>
         <item name="colorControlActivated">@color/secondaryTextColor_light</item>
     </style>
-	<style name="CreateProjectCardView" parent="@style/Widget.MaterialComponents.CardView">
-		<item name="shapeAppearanceOverlay">@style/CreateProjectCardView.ShapeAppearanceOverlay</item>
-	</style>
-	<style name="CreateProjectCardView.ShapeAppearanceOverlay" parent="">
-		<item name="cornerFamily">rounded</item>
-		<item name="cornerSizeTopRight">16dp</item>
-		<item name="cornerSizeTopLeft">16dp</item>
-		<item name="cornerSizeBottomRight">0dp</item>
-		<item name="cornerSizeBottomLeft">0dp</item>
-	</style>
-	<style name="AppTheme.ShapeOverlay.Large" parent="">
-		<item name="cornerFamily">rounded</item>
-		<item name="cornerSizeTopRight">16dp</item>
-		<item name="cornerSizeTopLeft">16dp</item>
-		<item name="cornerSizeBottomRight">0dp</item>
-		<item name="cornerSizeBottomLeft">0dp</item>
-	</style>
-	<!-- Alert Dialog -->
-	<style name="AppTheme.MaterialAlertDialog" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
-		<item name="shapeAppearanceOverlay">@style/MaterialDialog.ShapeAppearance</item>
-		<item name="materialAlertDialogTitleTextStyle">@style/MaterialDialog.Title.Text</item>
-		<item name="materialAlertDialogBodyTextStyle">@style/MaterialDialog.Body.Text</item>
-		<item name="buttonBarPositiveButtonStyle">@style/MaterialAlertDialog.PositiveButtonStyle</item>
-		<item name="buttonBarNegativeButtonStyle">@style/MaterialAlertDialog.NegativeButtonStyle</item>
-		<item name="buttonBarNeutralButtonStyle">@style/MaterialAlertDialog.NeutralButtonStyle</item>
-		<item name="android:windowEnterAnimation">@animator/dialog_in</item>
-		<item name="android:windowExitAnimation">@animator/dialog_out</item>
-	</style>
-	<style name="MaterialDialog.ShapeAppearance" parent="">
-		<item name="cornerSize">10dp</item>
-	</style>
-	<style name="MaterialDialog.Title.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Title.Text">
-		<item name="android:textColor">@color/primaryTextColor</item>
-		<item name="android:textStyle">bold</item>
-		<item name="fontFamily">@font/josefin_sans</item>
-	</style>
-	<style name="MaterialDialog.Body.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Body.Text">
-		<item name="android:textColor">@color/primaryTextColor</item>
-		<item name="fontFamily">@font/josefin_sans</item>
-	</style>
-	<style name="MaterialAlertDialog.PositiveButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
-		<item name="android:textColor">@color/secondaryColor</item>
-		<item name="backgroundTint">@android:color/transparent</item>
-		<item name="fontFamily">@font/josefin_sans</item>
-	</style>
-	<style name="MaterialAlertDialog.NegativeButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
-		<item name="android:textColor">@color/secondaryColor</item>
-		<item name="backgroundTint">@android:color/transparent</item>
-		<item name="fontFamily">@font/josefin_sans</item>
-	</style>
-	<style name="MaterialAlertDialog.NeutralButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
-		<item name="android:textColor">@color/secondaryColor</item>
-		<item name="backgroundTint">@android:color/transparent</item>
-		<item name="fontFamily">@font/josefin_sans</item>
-	</style>
-	<style name="AppTheme.FilePicker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+    <style name="CreateProjectCardView" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="shapeAppearanceOverlay">@style/CreateProjectCardView.ShapeAppearanceOverlay
+        </item>
+    </style>
+
+    <style name="CreateProjectCardView.ShapeAppearanceOverlay" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <style name="AppTheme.ShapeOverlay.Large" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+    <!-- Alert Dialog -->
+    <style name="AppTheme.MaterialAlertDialog" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="shapeAppearanceOverlay">@style/MaterialDialog.ShapeAppearance</item>
+        <item name="materialAlertDialogTitleTextStyle">@style/MaterialDialog.Title.Text</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/MaterialDialog.Body.Text</item>
+        <item name="buttonBarPositiveButtonStyle">@style/MaterialAlertDialog.PositiveButtonStyle
+        </item>
+        <item name="buttonBarNegativeButtonStyle">@style/MaterialAlertDialog.NegativeButtonStyle
+        </item>
+        <item name="buttonBarNeutralButtonStyle">@style/MaterialAlertDialog.NeutralButtonStyle
+        </item>
+        <item name="android:windowEnterAnimation">@animator/dialog_in</item>
+        <item name="android:windowExitAnimation">@animator/dialog_out</item>
+    </style>
+
+    <style name="MaterialDialog.ShapeAppearance" parent="">
+        <item name="cornerSize">10dp</item>
+    </style>
+
+    <style name="MaterialDialog.Title.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Title.Text">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/josefin_sans</item>
+    </style>
+
+    <style name="MaterialDialog.Body.Text" parent="@style/MaterialAlertDialog.MaterialComponents.Body.Text">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="fontFamily">@font/josefin_sans</item>
+    </style>
+
+    <style name="MaterialAlertDialog.PositiveButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/secondaryColor</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="fontFamily">@font/josefin_sans</item>
+    </style>
+
+    <style name="MaterialAlertDialog.NegativeButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/secondaryColor</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="fontFamily">@font/josefin_sans</item>
+    </style>
+
+    <style name="MaterialAlertDialog.NeutralButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@color/secondaryColor</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="fontFamily">@font/josefin_sans</item>
+    </style>
+
+    <style name="AppTheme.FilePicker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryDarkColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
@@ -116,11 +136,13 @@
         <item name="unicorn.file.selectionTint">@color/secondaryLightColor</item>
         <item name="unicorn.fabColor">@color/secondaryColor</item>
     </style>
+
     <style name="VerticalDivider">
         <item name="android:layout_width">0.8dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">?android:attr/listDivider</item>
     </style>
+
     <style name="TextButton.IconOnly" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="iconPadding">0dp</item>
         <item name="cornerFamily">cut</item>
@@ -133,6 +155,7 @@
         <item name="android:minWidth">48dp</item>
         <item name="android:minHeight">48dp</item>
     </style>
+
     <style name="ButtonBar.IconOnly.Left" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSizeTopLeft">8dp</item>
@@ -140,10 +163,12 @@
         <item name="cornerSizeBottomLeft">8dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
     </style>
+
     <style name="ButtonBar.IconOnly.Middle" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">0dp</item>
     </style>
+
     <style name="ButtonBar.IconOnly.Right" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSizeTopLeft">0dp</item>
@@ -151,8 +176,14 @@
         <item name="cornerSizeBottomLeft">0dp</item>
         <item name="cornerSizeBottomRight">8dp</item>
     </style>
+
     <style name="PopupAnimation">
         <item name="android:windowEnterAnimation">@anim/popup_in</item>
         <item name="android:windowExitAnimation">@anim/popup_out</item>
-	</style>
+    </style>
+
+    <style name="AppTheme.SheetAboveKeyboard" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
 </resources>
