--- a/app/src/main/res/layout/layout_optionssheet_item.xml
+++ b/app/src/main/res/layout/layout_optionssheet_item.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:orientation="vertical"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:paddingBottom="16dp"
-	android:paddingTop="16dp"
-	android:clickable="true"
-	android:focusable="true"
-	android:background="@drawable/bg_ripple">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="16dp"
+    android:paddingTop="16dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@drawable/bg_ripple">
 
 	<ImageView
 		android:id="@+id/icon"
