--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="primaryDarkColor">#010101</color>
     <color name="secondaryColor">#ff5252</color>
     <color name="secondaryLightColor">#ff867f</color>
+    <color name="secondaryLightColor_transparent">#1FFF867F</color>
     <color name="secondaryDarkColor">#c50e29</color>
     <color name="primaryTextColor">#ffffff</color>
     <color name="primaryTextColorLight">#bdbdbd</color>
