Removed vertical text action window and updated the UI of the text actions

--- a/app/src/main/res/layout/layout_text_action_item.xml
+++ b/app/src/main/res/layout/layout_text_action_item.xml
@@ -16,20 +16,22 @@
   -->
 <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="60dp"
+    android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    android:foreground="@drawable/bg_ripple"
     android:clickable="true"
-    android:drawablePadding="8dp"
+    android:drawablePadding="-4dp"
+    android:drawableTint="@color/primaryIconColor"
     android:focusable="true"
-    android:gravity="center_vertical"
-    android:maxLines="1"
-    android:paddingStart="8dp"
+    android:foreground="@drawable/bg_ripple"
+    android:gravity="center"
+    android:maxLines="2"
+    android:paddingStart="4dp"
     android:paddingTop="4dp"
-    android:paddingEnd="8dp"
+    android:paddingEnd="4dp"
     android:paddingBottom="4dp"
     android:textColor="@color/primaryTextColor"
-    android:textSize="14sp"
-    tools:drawableStart="@drawable/ic_expand_selection"
-    tools:text="Expand selection" />
+    android:textSize="8sp"
+    tools:drawableTop="@drawable/ic_format_code"
+    tools:layout_height="wrap_content"
+    tools:text="Format code" />
