Fixed build error

--- a/common/src/main/res/layout/layout_toast.xml
+++ b/common/src/main/res/layout/layout_toast.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-	<com.itsaky.toaster.ToastWrapper
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal"
-		android:padding="8dp"
-		android:gravity="center"
-		android:id="@+id/toast_toastWrapper">
+    <com.itsaky.toaster.ToastWrapper
+        android:id="@+id/toast_toastWrapper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-		<ImageView
-			android:src="@android:drawable/ic_delete"
-			android:layout_width="30dp"
-			android:layout_height="30dp"
-			android:layout_marginEnd="16dp"
-			android:id="@+id/toast_image"/>
+        <ImageView
+            android:id="@+id/toast_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="16dp"
+            android:src="@android:drawable/ic_delete"
+            tools:ignore="ContentDescription" />
 
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:ellipsize="end"
-			android:maxLines="2"
-			android:id="@+id/toast_text"
-			android:textColor="@color/primaryTextColor"/>
+        <TextView
+            android:id="@+id/toast_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/white" />
 
-	</com.itsaky.toaster.ToastWrapper>
+    </com.itsaky.toaster.ToastWrapper>
 
 </RelativeLayout>
 
