--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -151,5 +151,9 @@
         <item name="hintTextColor">@color/secondaryColor</item>
         <item name="boxStrokeColor">@color/text_input_box_stroke_selector</item>
     </style>
-
+    <style name="AppTheme.Editor.TextActionMenu" parent="">
+        <item name="android:overlapAnchor">true</item>
+        <item name="android:dropDownVerticalOffset">0dp</item>
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+    </style>
 </resources>
