Add type fragment in create java class

--- a/app/src/main/res/layout/layout_create_file_java.xml
+++ b/app/src/main/res/layout/layout_create_file_java.xml
@@ -42,6 +42,15 @@
 				app:icon="@drawable/ic_filetype_activity"
 				android:theme="@style/AppTheme.MaterialToggleButton"
 				style="?attr/materialButtonOutlinedStyle"/>
+                
+            <com.google.android.material.button.MaterialButton
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/type_fragment"
+				android:text="@string/classtype_fragment"
+				app:icon="@drawable/ic_filetype_activity"
+				android:theme="@style/AppTheme.MaterialToggleButton"
+				style="?attr/materialButtonOutlinedStyle"/>    
 
 			<com.google.android.material.button.MaterialButton
 				android:layout_width="wrap_content"
@@ -85,4 +94,5 @@
 	</com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
+
 
