--- a/app/src/main/res/layout/layout_editor_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_editor_bottom_sheet.xml
@@ -36,6 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:gravity="center"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:singleLine="true"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
