--- a/app/src/main/res/layout/layout_editor_find_replace.xml
+++ b/app/src/main/res/layout/layout_editor_find_replace.xml
@@ -28,7 +28,7 @@
         style="@style/AppTheme.TextInputLayout.Outlined"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/replacement"
+        android:hint="@string/msg_replacement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
