--- a/app/src/main/res/layout/layout_create_project_content.xml
+++ b/app/src/main/res/layout/layout_create_project_content.xml
@@ -180,7 +180,7 @@
 					android:id="@+id/nextCard"
 					android:layout_width="48dp"
 					android:layout_height="48dp"
-					android:layout_marginEnd="180dp"
+					android:layout_margin="8dp"
 					android:clickable="true"
 					android:descendantFocusability="blocksDescendants"
 					android:focusable="true"
@@ -207,7 +207,7 @@
 		<ImageView
 			android:id="@+id/createproject_templateImage"
 			android:layout_width="90dp"
-			android:layout_height="match_parent"
+			android:layout_height="200dp"
 			android:scaleType="fitCenter" />
 		
 	</LinearLayout>
