--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~  This file is part of AndroidIDE.
   ~
   ~  AndroidIDE is free software: you can redistribute it and/or modify
@@ -13,8 +14,9 @@
   ~
   ~  You should have received a copy of the GNU General Public License
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
-  -->
+-->
 <resources>
+
     <string-array name="dimension_units">
         <item>dp</item>
         <item>sp</item>
@@ -23,4 +25,14 @@
         <item>in</item>
         <item>mm</item>
     </string-array>
+    
+    <string-array name="logcat_units">
+        <item>Verbose</item>
+        <item>Debug</item>
+        <item>Info</item>
+        <item>Warning</item>
+        <item>Error</item>
+        <item>Fatal</item>
+    </string-array>
+
 </resources>
