Fixed: Invalid text position of buttons in MainActivity

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -55,7 +55,7 @@
         android:layout_marginBottom="8dp"
         android:elevation="0dp"
         android:ellipsize="end"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:singleLine="true"
         android:text="@string/msg_create_new_project"
         android:textAlignment="center"
@@ -79,7 +79,7 @@
         android:layout_marginBottom="8dp"
         android:elevation="0dp"
         android:ellipsize="end"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:singleLine="true"
         android:text="@string/msg_open_existing_project"
         android:textAlignment="center"
@@ -102,7 +102,7 @@
         android:layout_marginBottom="8dp"
         android:elevation="0dp"
         android:ellipsize="end"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:singleLine="true"
         android:text="@string/btn_terminal"
         android:textAlignment="center"
@@ -125,7 +125,7 @@
         android:layout_marginBottom="8dp"
         android:elevation="0dp"
         android:ellipsize="end"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:singleLine="true"
         android:text="@string/msg_preferences"
         android:textAlignment="center"
